# python-otel-log-issue

./: Dockerfile  main.py  pyproject.toml  readme.md
